# flask-homecloud

./: .gitignore  README.md  __init__.py  auth.py  config.py  database.sqlite  dev_database.sqlite  main.py  models.py  requirements.txt  setup.cfg  test_database.sqlite  utils.py
.github/workflows/: python-app.yml
blueprints/: auth.py  main.py
forms/: __init__.py  auth.py  main.py
homecloud/: app.py  config.py  models.py  utils.py
homecloud/blueprints/: auth.py  main.py
homecloud/forms/: __init__.py  auth.py  main.py
homecloud/templates/auth/: logout.html  register.html
homecloud/templates/main/: cloud.html  cloud_rename.html  delete_file.html
homecloud/tests/: conftest.py
homecloud/tests/auth/: test_login.py  test_logout.py  test_register.py
homecloud/tests/main/: test_clouds.py  test_create_dir.py  test_delete_dir.py  test_delete_file.py  test_download_file.py  test_rename.py  test_upload_file.py
homecloud/tests/models/: test_event.py
static/auth/css/: logout.css  register.css
static/css/auth/: login.css  logout.css
static/css/main/: base.css
static/main/css/: main.css
templates/: upload_file.html
templates/auth/: base.html  login.html  logout.html  register.html
templates/main/: base.html  cloud.html  cloud_rename.html  delete_file.html
tests/: conftest.py
tests/auth/: test_register.py
tests/main/: test_clouds.py  test_create_dir.py  test_delete_dir.py  test_delete_file.py  test_download_file.py  test_rename.py
tests/models/: test_event.py
