[metadata]
name = flask homecloud
version = 1.0.0
author = Sleiman Orocua
author_email = sleimanjose23@hotmail.com
description = A flask applicaton to save files locally
long_description = file: README.md
keywords = flask
classifiers =
    Framework :: Flask
    Programming Language :: Python :: 3

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    pytest